# dfa-regex

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
src/: lib.rs
