[package]
name = "dfa-regex"
version = "0.0.1"
edition = "2021"
description = "Match regular expressions using a corresponding DFA"
license = "MIT"
repository = "https://github.com/mrvillage/dfa-regex"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0.36"
syn = "2.0.65"
thiserror = "1.0.61"
